RESOLVED FIXED 260216
AX: ARIA role parsing should ignore any leading/trailing whitespace, including line breaks
https://bugs.webkit.org/show_bug.cgi?id=260216
Summary AX: ARIA role parsing should ignore any leading/trailing whitespace, includin...
James Craig
Reported 2023-08-15 12:59:28 PDT
WPT Failure: ARIA role parsing should ignore any leading/trailing whitespace, including line breaks. Failure in new test, "div[role=button] ignoring line break" https://wpt.fyi/results/wai-aria/role/fallback-roles.html?label=experimental&label=master&aligned For this markup (the line break here is substantive) <div role=" button" data-testname="div[role=button] ignoring line break" aria-label="x" data-expectedrole="button" class="ex">x</div> FAIL message: expected "button" but got "generic" as the computed role
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-15 12:59:37 PDT
Hunseop Jeong
Comment 3 2023-09-01 03:25:05 PDT
EWS
Comment 4 2023-09-12 21:31:48 PDT
Committed 267930@main (3693580c14ed): <https://commits.webkit.org/267930@main> Reviewed commits have been landed. Closing PR #17337 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.