AX: Fix to parse edge cases of role string https://bugs.webkit.org/show_bug.cgi?id=260216 rdar://problem/113923520

Reviewed by Tyler Wilcock.

ARIA role parsing should ignore any leading/trailing whitespaces,
including line breaks.

* LayoutTests/accessibility/aria-fallback-roles-expected.txt:
* LayoutTests/accessibility/aria-fallback-roles.html:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::ariaRoleToWebCoreRole):

Canonical link: https://commits.webkit.org/267930@main